# Notion-Mailer

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: notion_client.py
src/Mailing/: gmail_client.py  smtp_client.py
src/notion_mailer/: __init__.py
src/notion_mailer/_dto/: mailDTO.py  pageDTO.py
src/notion_mailer/_mapper/: mapper_mail.py  mapper_page.py
src/notion_mailer/mailing/: gmail_client.py  signature.py  smtp_client.py
src/notion_mailer/mapper/: mapper_page.py
src/notion_mailer/service/: google_service.py  notion_mail_service.py  notion_service.py  notion_summirizer.py  template_candidature_service.py
tests/: test_map_to_page_dto.py  test_notion_service.py
