[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion_mailer"
description = "Automating the mail sendding for finding a job"
authors = [
    {name = "Hafiz Yaolire"}
]
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "notion-client==2.5.0",
    "dotenv",
    "langchain==1.0.2",
    "langchain-openai==1.0.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["./src"]
include = ["notion_mailer"]